tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__XLTurboSCSteamTu-bz_RazGFSl6k7fUkEt1Lzw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3568340047664860111,
  "prerequisites": [
    2610
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The most dense steam available. Check the XL Steam Turbine quest above for an explanation of the mechanics shared across all turbines.\n\nThis turbine has unexpected bugs related to the integer limit, when using the best turbine materials in the pack. There might also be other limitations when trying to move billions of SC Steam per tick from one place to another. Be wary of bugs when trying to use this XL turbine with endgame turbine materials.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "XL Turbo SC Steam Turbine",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2610
  ],
  "rewards": [],
  "tasks": []
}
