tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__XLTurboSteamTurb-4HoSq97QT3G63VJFeV_0ZQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 16055420020362048613,
  "prerequisites": [
    176,
    783
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The first of the XL Turbines. Because this is the first, this quest will include an explanation for the mechanics shared across all XL Turbines.\n\nEvery XL Turbine can hold 12 turbine items inside, in the 12 Rotor Assemblies, but their total speed is 16x higher than the regular multiblock equivalent. Make sure all the turbine items inside are of the same material, and also that you can provide enough input to match the flow rate that the multi needs! If you need even more speed, you can enable Loose Mode with a screwdriver on the controller, which can greatly increase turbines' flowrate while decreasing the efficiency.\n\nThese huge turbines also support TecTech hatches, so you can use multi-amp dynamos with a much higher output amount than normal, or even laser outputs later on to sustain the hundreds of millions of EU/t that the strongest turbines can produce.\n\nEach of the 5 turbines takes in the same fuels as their smaller counterparts, with some exceptions that will be mentioned in the respective quest. This XL Steam Turbine only consumes Steam, as expected.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "XL Turbo Steam Turbine",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176,
    783
  ],
  "rewards": [],
  "tasks": []
}
