tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__YouHaventLearned-AAAAAAAAAAAAAAAAAAAK5w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2791,
  "prerequisites": [
    860,
    1245
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This multi follows the same logic as the Large Combustion Engine, but it uses semifluids instead. If you have the need to burn any of those for power, like Heavy Fuel for example, you can put this together.\n\n[note]Check the Large Combustion Engine quest for more details.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "You Haven't Learned How to Separate Fluids Yet? Seriously?",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860,
    1245
  ],
  "rewards": [],
  "tasks": []
}
