tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoGeneratePow-AAAAAAAAAAAAAAAAAAAACQ==__Zzzincing-Ng5Ldnf3TZCefB4Mr3u-rQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 8644463293575708333,
  "prerequisites": [
    11861152961868178529
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you know how much Zinc you have in your body? Very little, but it's important. Now imagine it's all plasma!\n\nThis is a very fast recipe, like Niobium Plasma. The only caveat is that it uses Tritium (not Trinium), a rare isotope of Hydrogen that you can obtain from Deuterium, a less rare isotope. You can pump it directly from Neptune, through the Space Elevator or simply by centrifuging the Deuterium you already automated for Helium Plasma.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Zzzincing...",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    11861152961868178529
  ],
  "rewards": [],
  "tasks": []
}
